--- a/next/package.json
+++ b/next/package.json
@@ -27,6 +27,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
+    "redux-saga-test-plan": "^4.0.6",
     "sass": "^1.77.1",
     "socket.io-client": "^4.7.5",
     "string-format": "^2.0.0",
