--- a/next/package.json
+++ b/next/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@adobe/redux-saga-promise": "^1.1.1",
+    "@commercetools-uikit/multiline-text-input": "^19.4.0",
     "axios": "^1.6.8",
     "jalali-moment": "^3.3.11",
     "lodash": "^4.17.21",
@@ -20,6 +21,7 @@
     "num2persian": "^3.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-intl": "^6.6.8",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "react-webcam": "^7.2.0",
