--- a/next/package.json
+++ b/next/package.json
@@ -36,11 +36,11 @@
     "zaman": "^2.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.12.12",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "typescript": "^5"
+    "typescript": "5.4.5"
   }
 }
