create web rtc and socket and constant folder and past related file in there

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,6 +10,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/webRTCHandler/main.js", "src/webRTCHandler/elements.js", "src/constant/constants.js"],
   "exclude": ["node_modules"]
 }
