--- a/next/package.json
+++ b/next/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@adobe/redux-saga-promise": "^1.1.1",
     "@commercetools-uikit/multiline-text-input": "^19.4.0",
+    "agora-rtc-react": "^2.1.0",
     "axios": "^1.6.8",
     "jalali-moment": "^3.3.11",
     "lodash": "^4.17.21",
